attempts to fix the jumping transition in products-menu

--- a/src/styles/components/_products-menu-section.scss
+++ b/src/styles/components/_products-menu-section.scss
@@ -5,7 +5,7 @@
   color: $white;
   min-height: 36.2222222222rem;
   height: 100%;
-  z-index: 1;
+  z-index: 0;
 
   @include tablets {
     background: url("./image/pics/products-menu/menu-tablets.jpg") top right 16% no-repeat;
@@ -19,7 +19,7 @@
     width: 100%;
     height: 100%;
     min-height: auto;
-    z-index: 1;
+    z-index: 0;
   }
 
   &__title.section__title {
@@ -27,7 +27,7 @@
     position: absolute;
     top: 20%;
     left: 10%;
-    z-index: 2;
+    z-index: 1;
 
     @include phones {
       font-size: rem(40px);
