--- a/src/styles/components/_products-menu.scss
+++ b/src/styles/components/_products-menu.scss
@@ -4,6 +4,7 @@
   right: 0;
   bottom: 0;
   display: flex;
+  z-index: 1;
 
   @include phones {
     width: 100%;
@@ -12,13 +13,14 @@
 
   &__item {
     display: flex;
-    z-index: 2;
+    height: 100%;
+    // z-index: 1;
   }
 
   &__title {
     position: relative;
     width: rem(102px);
-    z-index: 2;
+    // z-index: 1;
 
     &::before {
       content: "";
@@ -27,7 +29,7 @@
       width: 100%;
       height: 100%;
       min-height: auto;
-      z-index: 100;
+      // z-index: 3;
     }
 
     @include phones {
@@ -50,7 +52,7 @@
     transform: rotate(-90deg) translate(-50%, -50%);
     transform-origin: 0 0;
     white-space: nowrap;
-    z-index: 100;
+    // z-index: 3;
   }
 
   &__content {
@@ -58,8 +60,8 @@
     max-width: 0;
     position: relative;
     overflow: hidden;
-    transition: max-width .7s;
-    z-index: -1;
+    transition: max-width 0.7s ease-in-out 0.5s;
+    // z-index: 100;
   }
 
   &__container {
@@ -69,17 +71,19 @@
 
     @include tablets {
       min-width: calc(100vw - 30rem);
-      padding-right: 1.563rem;
+      padding-right: 7.563rem;
     }
 
     @include phones {
       min-width: calc(100vw - 8rem);
+      padding-right: 1.563rem;
     }
   }
 }
 
 .products-active>.products-menu__content {
   max-width: rem(524px);
+  // z-index: 2;
 
   @include tablets {
     width: calc(100vw - 16.9rem);
@@ -87,7 +91,6 @@
 
   @include phones {
     width: calc(100vw - 5rem);
-    z-index: 2;
   }
 }
 
@@ -99,4 +102,5 @@
 
 li.products-menu__item.products-active {
   width: 100%;
+  z-index: 3;
 }
